<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_title"
            android:icon="@drawable/ic_playlist_add_check_black_24dp"
            android:title="@string/title"/>
        <item
            android:visible="false"
            android:id="@+id/nav_submissions"
            android:icon="@drawable/ic_playlist_add_black_24dp"
            android:title="@string/submissions"/>
    </group>

    <item android:title="@string/additional_options">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_arrow_back_black_24dp"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>
